--- a/JS-CRUD-main/Javascript/assets/stylesheet/style.css
+++ b/JS-CRUD-main/Javascript/assets/stylesheet/style.css
@@ -10,8 +10,8 @@
 #nav {
     width: 100%;
     height: 15vh;
-    background-color: darkblue;
-    color: white;
+    background-color: rgb(115, 89, 211);
+    color: rgb(72, 245, 158);
     font-size: 2em;
     font-family: Ubuntu;
     text-align: center;
@@ -61,7 +61,7 @@
 .input-btn:hover {
     background-color: #383838;
     border-color: #383838;
-    color: white;
+    color: rgb(78, 131, 211);
 }
 
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
@@ -81,11 +81,11 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 }
 
 #myTable th {
-    background-color: darkblue;
+    background-color: rgb(71, 47, 158);
     padding: 10px;
     color: white;
     font-weight: 100;
-}
+}   
 
 #myTable td, th{
     border: 1px solid #ddd;
@@ -97,11 +97,11 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 }
 
 #myTable tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #d170d1;
 }
 
 #myTable tr:hover {
-    background-color: #ddd;
+    background-color: #8478f3;
 }
 
 .remove-btn{
